--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/styled-components-react-native": "^5.1.2",
+    "axios": "^0.24.0",
     "expo": "~43.0.0",
     "expo-location": "~13.0.4",
     "expo-status-bar": "~1.1.0",
